# ClipboardQRReader

./: .gitignore  Cargo.toml  README.md  build.sh  flake.nix  run_wayland.sh
.cargo/: config.toml
src/: app.rs  cli.rs  clipboard_handler.rs  global_state.rs  hide_console.rs  lib.rs  main.rs  qr_generator.rs  qr_scanner.rs  tray.rs
