[package]
name = "clipboard-qr"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A clipboard QR code application"
license = "MIT"

[dependencies]
# GUI framework for cross-platform development
eframe = "0.26.0"
egui = "0.26.0"

# QR code generation
qrcode = "0.13.0"

# Clipboard handling
arboard = "3.3.0"

# Image handling
image = "0.24.0"

# Error handling
anyhow = "1.0.0"
thiserror = "1.0.0"

# Logging
tracing = "0.1.0"
tracing-subscriber = "0.3.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.0", features = ["winuser", "wingdi"] }

[target.'cfg(unix)'.dependencies]
x11rb = "0.12.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true 