[package]
name = "clipboard-qr"
version = "0.1.0"
edition = "2021"
authors = ["undefined <i@undefined.moe>"]
description = "A clipboard QR code application"
license = "MIT"

[dependencies]
# GUI framework for cross-platform development
eframe = "0.31.1"
egui = "0.31.1"

# QR code generation
qrcode = "0.13.0"

# QR code detection/scanning
bardecoder = "0.5.0"

# Clipboard handling
arboard = "3.6.0"

# Image handling
image = "0.24.9"

# Error handling
anyhow = "1.0.98"
thiserror = "2.0.12"

# Logging
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

# System tray
tray-icon = "0.21"
winit = "0.30.11"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winuser", "wingdi", "winbase", "errhandlingapi", "libloaderapi", "processthreadsapi", "tlhelp32", "winnt", "psapi", "handleapi", "wincon"] }

[target.'cfg(unix)'.dependencies]
x11rb = "0.13.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true 
